--- a/style.css
+++ b/style.css
@@ -498,7 +498,7 @@ section{
     border-radius: 8px;
     display: flex;
     transition: transform 0.5s;
-    /* height: 300px; */
+    height: 300px;
 
 }
 .layer{
